# Recette

./: PLAN-PHOTOS-IA.md  PROJECT_CONTEXT.md  README.md  index.html  manifest.json  package.json  pay-retour.html  sw.js
calforge/: README.md  pyproject.toml  run.bat  run.sh
calforge/docs/: ARCHITECTURE.md  ROADMAP.md
calforge/docs/adr/: 0001-technology-stack.md  0002-modular-monolith-and-data-layer.md  0003-content-addressed-blob-store.md  0004-facts-vs-hypotheses.md  0005-plugins-via-entry-points.md  0006-unified-history-timeline.md  0007-map-detection-heuristics.md  0008-map-pack-format.md  0009-ai-assistant-architecture.md  0010-reporting-and-pdf.md  0011-broad-import-and-map-editing.md  0012-automatic-map-pack-generation.md  0013-automatic-pack-catalogue.md
calforge/src/calforge/: __init__.py  __main__.py  app.py  demo.py  labels.py  packs.py
calforge/src/calforge/ai/: __init__.py  base.py  context.py
calforge/src/calforge/analysis/: __init__.py  diff.py  mapdetect.py  packbuilder.py  stats.py
calforge/src/calforge/core/: __init__.py  config.py  events.py  logging.py  plugins.py  registry.py
calforge/src/calforge/data/: __init__.py  blobstore.py  database.py  models.py
calforge/src/calforge/formats/: __init__.py  base.py  generic.py
calforge/tests/: conftest.py  test_analysis_services.py  test_assistant.py  test_blobstore.py  test_catalogue.py  test_database.py  test_definitions.py  test_diff.py  test_formats.py  test_map_editing.py  test_mapdetect.py  test_packbuilder.py  test_reports.py  test_services.py  test_ui_smoke.py  test_vehicle_folder.py
(+60 files in other folders)
